--- a/InstallBaker/Views/ToolWindowView.xaml
+++ b/InstallBaker/Views/ToolWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AshokGelal.InstallBaker.UI.MyControl"
+﻿<UserControl x:Class="AshokGelal.InstallBaker.Views.ToolWindowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
