--- a/InstallBaker/Views/ToolWindowView.xaml
+++ b/InstallBaker/Views/ToolWindowView.xaml
@@ -138,7 +138,7 @@
                         <CheckBox Grid.Column="0" Grid.Row="6" Content="Add License" 
                                   IsChecked="{Binding ItsAddLicenseFlag}" />
 
-                        <CheckBox Grid.Column="1" Grid.Row="6" Content="Add Bitmap"
+                        <CheckBox Grid.Column="1" Grid.Row="6" Content="Add Banner"
                               IsChecked="{Binding ItsAddBannerFlag}"/>
 
                     </Grid>
