--- a/InstallBaker/Views/ToolWindowView.xaml
+++ b/InstallBaker/Views/ToolWindowView.xaml
@@ -13,14 +13,18 @@
     <UserControl.Resources>
         <Style TargetType="Label">
             <Setter Property="Margin" Value="5 5 0 5" />
-            <Setter Property="Foreground" Value="#FF0099FF" />
+            <Setter Property="Foreground" Value="#DD000000" />
             <Setter Property="FontSize" Value="13" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
         </Style>
 
+        <Style TargetType="Label" x:Key="_listLabel">
+            <Setter Property="Margin" Value="5 1 0 1" />
+        </Style>
+
         <Style TargetType="CheckBox">
-            <Setter Property="Foreground" Value="#FF0099FF" />
+            <Setter Property="Foreground" Value="#DD000000" />
             <Setter Property="Margin" Value="5 5 0 5" />
             <Setter Property="FontSize" Value="13" />
             <Setter Property="VerticalAlignment" Value="Center" />
@@ -30,11 +34,6 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="FontSize" Value="13" />
             <Setter Property="Padding" Value="5" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Margin" Value="5 1 1 1" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="FontSize" Value="13" />
         </Style>
         <Style TargetType="Button">
             <Setter Property="Padding" Value="15 5" />
@@ -48,9 +47,10 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" BorderBrush="{x:Null}" Height="25">
-                      <TextBlock Text="{Binding DisplayTitle}" />
-                    </Border>
+                      <Label 
+                          ToolTip="{Binding FullPath}"
+                          Style="{StaticResource _listLabel}"
+                          Content="{Binding DisplayTitle}" />
                     <Button Grid.Column="1" Content="Add" Command="{Binding DataContext.ItsAddFileCommand, ElementName=Container}" CommandParameter="{Binding}" />
                 </Grid>
             </Border>
@@ -74,9 +74,10 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" BorderBrush="{x:Null}" Height="25">
-                      <TextBlock Text="{Binding DisplayTitle}" />
-                    </Border>
+                      <Label 
+                          ToolTip="{Binding FullPath}"
+                          Style="{StaticResource _listLabel}"
+                          Content="{Binding DisplayTitle}" />
                     <Button Grid.Column="1" Content="Remove" Command="{Binding DataContext.ItsRemoveFileCommand, ElementName=Container}" CommandParameter="{Binding}" />
                 </Grid>
             </Border>
@@ -103,9 +104,10 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <Border Grid.Column="0" BorderBrush="{x:Null}" Height="25">
-                      <TextBlock Text="{Binding DisplayTitle}" />
-                    </Border>
+                    <Label 
+                        ToolTip="{Binding FullPath}"
+                        Style="{StaticResource _listLabel}"
+                        Content="{Binding DisplayTitle}" />
                     <Button Grid.Column="1" Margin="0 0 2 0" Content="Add" Command="{Binding DataContext.ItsAddFileCommand, ElementName=Container}" CommandParameter="{Binding}" />
                     <Button Grid.Column="2" Content="Remove" Command="{Binding DataContext.ItsRemoveFileCommand, ElementName=Container}" CommandParameter="{Binding}" />
                 </Grid>
@@ -133,28 +135,28 @@
         </ToolBar>
         <TabControl Grid.Row="1" VerticalAlignment="Stretch" Background="#99FFFFFF">
             <TabItem Header="New Items">
-                <Grid>
+                  <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ItemsControl
                         ItemTemplate="{StaticResource _addRemoveItemStyle}"
                         ItemsSource="{Binding ItsNewFileList}">
                     </ItemsControl>
-                </Grid>
+                  </ScrollViewer>
             </TabItem>
             <TabItem Header="Included Items">
-                <Grid>
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ItemsControl
                         ItemTemplate="{StaticResource _removeItemStyle}"
                         ItemsSource="{Binding ItsIncludedFileList}">
                     </ItemsControl>
-                </Grid>
+                </ScrollViewer>
             </TabItem>
             <TabItem Header="Excluded Items">
-                <Grid>
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ItemsControl
                         ItemTemplate="{StaticResource _addItemStyle}"
                         ItemsSource="{Binding ItsExcludedFileList}">
                     </ItemsControl>
-                </Grid>
+                </ScrollViewer>
             </TabItem>
             <TabItem Header="Installer Info">
                 <StackPanel>
